// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListSorting component has the correct display type options in the dropdown 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Display results
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456849"
          id="publication-display-records-as-option-456849"
          key="456849"
          value="auto"
        >
          Auto
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456850"
          id="publication-display-records-as-option-456850"
          key="456850"
          value="standard"
        >
          Standard
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456851"
          id="publication-display-records-as-option-456851"
          key="456851"
          value="image-gallery"
        >
          Image Gallery
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders correctly when set to false 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`PublicationsListSorting component renders correctly when set to true 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={2}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Display results
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-display-records-as"
        disabled={false}
        id="displayRecordsAs"
        onChange={[Function]}
        value="auto"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456849"
          id="publication-display-records-as-option-456849"
          key="456849"
          value="auto"
        >
          Auto
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456850"
          id="publication-display-records-as-option-456850"
          key="456850"
          value="standard"
        >
          Standard
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-display-records-as-option-456851"
          id="publication-display-records-as-option-456851"
          key="456851"
          value="image-gallery"
        >
          Image Gallery
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    sx={
      Object {
        "display": Object {
          "sm": "block",
          "xs": "none",
        },
      }
    }
  >
    <ExportPublications
      disabled={false}
      exportData={Object {}}
      onChange={[Function]}
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders will set state on receiving new props 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders will set state on receiving new props 2`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders with empty paging data 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`PublicationsListSorting component renders with export dropdown for admin or author 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    sx={
      Object {
        "display": Object {
          "sm": "block",
          "xs": "none",
        },
      }
    }
  >
    <ExportPublications
      disabled={false}
      exportData={Object {}}
      onChange={[Function]}
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders with export dropdown hidden 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component renders with non-empty paging data 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component updates sortBy, sortDirection and pageSize state when they change after render 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`PublicationsListSorting component updates sortBy, sortDirection and pageSize state when they change after render 2`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort results by
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-by"
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="score"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-0"
          id="publication-list-sorting-sort-by-option-0"
          key="0"
          value="published_date"
        >
          Published date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-1"
          id="publication-list-sorting-sort-by-option-1"
          key="1"
          value="score"
        >
          Search relevance
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-2"
          id="publication-list-sorting-sort-by-option-2"
          key="2"
          value="title"
        >
          Title
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-3"
          id="publication-list-sorting-sort-by-option-3"
          key="3"
          value="created_date"
        >
          Created date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-4"
          id="publication-list-sorting-sort-by-option-4"
          key="4"
          value="updated_date"
        >
          Updated date
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-5"
          id="publication-list-sorting-sort-by-option-5"
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-6"
          id="publication-list-sorting-sort-by-option-6"
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-by-option-7"
          id="publication-list-sorting-sort-by-option-7"
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Sort order
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-sort-order"
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Asc"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-0"
          id="publication-list-sorting-sort-order-option-0"
          key="0"
          value="Desc"
        >
          Desc
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-sort-order-option-1"
          id="publication-list-sorting-sort-order-option-1"
          key="1"
          value="Asc"
        >
          Asc
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        shrink={true}
      >
        Works per page
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        data-testid="publication-list-sorting-page-size"
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={50}
        variant="standard"
      >
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-5"
          id="publication-list-sorting-page-size-option-5"
          key="records-per-page-5"
          value={5}
        >
          5
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-10"
          id="publication-list-sorting-page-size-option-10"
          key="records-per-page-10"
          value={10}
        >
          10
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-15"
          id="publication-list-sorting-page-size-option-15"
          key="records-per-page-15"
          value={15}
        >
          15
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-20"
          id="publication-list-sorting-page-size-option-20"
          key="records-per-page-20"
          value={20}
        >
          20
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-50"
          id="publication-list-sorting-page-size-option-50"
          key="records-per-page-50"
          value={50}
        >
          50
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          data-testid="publication-list-sorting-page-size-option-100"
          id="publication-list-sorting-page-size-option-100"
          key="records-per-page-100"
          value={100}
        >
          100
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
